<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ibox.MainActivity">

    <EditText
        android:id="@+id/LoginUserName"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="226dp"
        android:ems="10"
        android:hint="@string/login_layout_hint_user_name"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginUserPassword"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/LoginUserPassword"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/login_layout_hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />
    <ImageView
        android:id="@+id/username_icon"
        android:layout_width="62dp"
        android:layout_height="56dp"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        app:layout_constraintRight_toLeftOf="@+id/LoginUserName"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="62dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/LoginUserPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/username_icon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Registered"
        android:layout_width="64dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@id/Login"
        android:layout_below="@id/Login"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/login_layout_registered"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Login" />
    <Button
        android:id="@+id/Forgive_pwd"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_alignRight="@id/Login"
        android:layout_below="@id/Login"
        android:background="#00000000"
        android:text="@string/login_layout_forgive_password"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.518"
        app:layout_constraintLeft_toRightOf="@+id/Registered"
        android:layout_marginLeft="8dp" />



        <Button
            android:id="@+id/Login"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:gravity="center"
            android:text="@string/login_layout_login"
            android:textColor="@android:color/white"
            android:background="@drawable/button_shape"
            android:textSize="20dip"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/LoginUserPassword"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
