<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ibox.RegisteredActivity">
    <TextView
        android:id="@+id/username"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/registered_layout_user_name"
        android:textSize="18dip"
        android:textColor="#7189d3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintVertical_bias="0.148"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/registered_layout_password"
        android:textColor="#7189d3"
        android:textSize="18dip"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.281"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <TextView
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:text="@string/registered_layout_phonenumber"
        android:textSize="18dip"
        android:textColor="#7189d3"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintVertical_bias="0.422"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:id="@+id/Registered_username"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="119dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:hint="username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:id="@+id/Registered_password"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="119dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
       android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:id="@+id/Registered_phonenumber"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="119dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:hint="phonenumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="8dp" />
    <TextView
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:text="地址"
        android:textSize="18dip"
        android:textColor="#7189d3"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        android:id="@+id/textView22" />
    <EditText
        android:id="@+id/Registered_address"
        android:layout_width="225dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        android:background="@color/white"
        android:hint="address"
        android:layout_marginLeft="119dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/Registered_registered"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_marginTop="256dp"

        android:background="@drawable/button_shape"
        android:text="注册"
        android:textSize="17dip"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />
    <Button
        android:id="@+id/Registered_backlogin"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/button_shape"
        android:text="返回登陆"
        android:textSize="17dip"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />
</android.support.constraint.ConstraintLayout>
